admin@hcl.com/GCP/CISCO/hclblueprint/HelmChart/istio-virtual-service.yaml
#-------------------- istio gateway -------------------#
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-istio-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.hclblueprint-admin.softwarization.net"
  - port:
      number: 443
      name: https
      protocol: HTTP
    hosts:
    - "*.hclblueprint-admin.softwarization.net"
#grafana#
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-grafana-vs
spec:
  hosts:
  - "grafana.hclblueprint-admin.softwarization.net"
  gateways:
  - istio-istio-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        port:
          number: 3000
        host: grafana.istio-system.svc.cluster.local
#grafanaend#
#prometheus#
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-prometheus-vs
spec:
  hosts:
  - "prometheus.hclblueprint-admin.softwarization.net"
  gateways:
  - istio-istio-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        port:
          number: 9090 
        host: prometheus.istio-system.svc.cluster.local
#prometheusend#
#servicegraph#
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-istio-vs
spec:
  hosts:
  - "servicegraph.hclblueprint-admin.softwarization.net"
  gateways:
  - istio-istio-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        port:
          number: 8088 
        host: servicegraph.istio-system.svc.cluster.local
#servicegraphend#
#tracing#
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-tracing-vs
spec:
  hosts:
  - "tracing.hclblueprint-admin.softwarization.net"
  gateways:
  - istio-istio-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        port:
          number: 80 
        host: tracing.istio-system.svc.cluster.local
#tracingend#
#zipkin#
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-zipkin-vs
spec:
  hosts:
  - "zipkin.hclblueprint-admin.softwarization.net"
  gateways:
  - istio-istio-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        port:
          number: 9411 
        host: zipkin.istio-system.svc.cluster.local
#zipkinend#
#jaeger#
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-jaeger-query-vs
spec:
  hosts:
  - "jaeger-query.hclblueprint-admin.softwarization.net"
  gateways:
  - istio-istio-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        port:
          number: 16686 
        host: jaeger-query.istio-system.svc.cluster.local
#jaegerend#



#db-mysql#
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-db-mysql-vs
spec:
  hosts:
  - "db-mysql.hclblueprint-admin.softwarization.net"
  gateways:
  - istio-istio-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        port:
          number: 3306
        host: db-mysql.istio-system.svc.cluster.local
#db-mysql#
#jenkins#
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-jenkins-vs
spec:
  hosts:
  - "jenkins.hclblueprint-admin.softwarization.net"
  gateways:
  - istio-istio-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        port:
          number: 8080
        host: jenkins.istio-system.svc.cluster.local
#jenkins#
#kafka#
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-kafka-vs
spec:
  hosts:
  - "kafka.hclblueprint-admin.softwarization.net"
  gateways:
  - istio-istio-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        port:
          number: 9092
        host: kafka.istio-system.svc.cluster.local
#kafka#
#efk#
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-efk-vs
spec:
  hosts:
  - "efk.hclblueprint-admin.softwarization.net"
  gateways:
  - istio-istio-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        port:
          number: 5601
        host: efk.istio-system.svc.cluster.local
#efk#
